new keyword support added